Remove dropdown menu for Account and fix Sign Up flickering issue on page refresh for authenticated user.

--- a/src/index.css
+++ b/src/index.css
@@ -16,23 +16,6 @@
 }
 
 /* menu styling */
-.account-dropdown {
-  padding: 15px 20px;
-  border-radius: 6px;
-  border: 1px solid #eeeeee;
-  text-align: left;
-  margin-top: 1rem;
-  margin-bottom: -2.5rem;
-}
-
-.account-user {
-  font-family: "Cabin", sans-serif;
-  color: var(--background);
-  font-size: 1.05rem;
-  font-weight: 600;
-  text-align: left;
-}
-
 .header-title {
   font-size: 2.45rem;
   font-family: "Cabin", sans-serif;
@@ -67,12 +50,11 @@
 
 .nav-link:link,
 .nav-link:visited,
-.nav-link:hover,
-.nav-link:active  {
+.nav-link:hover  {
   text-decoration: none;
 }
 
-.nav-link:active {
+.nav-link.active {
   color: var(--accent-secondary);
 }
 
@@ -105,9 +87,8 @@
   align-items: center;
 }
 
-.expand-account-arrow {
-  cursor: pointer;
-  margin-left: -0.5rem;
+#hidden-signup {
+  display: none;
 }
 
 /* styling for message telling user to sign in to access app */
@@ -183,18 +164,6 @@
   border-radius: 1.5rem;
   padding: 12px 16px;
   font-size: 1.2rem;
-}
-
-#account-dropdown-signout {
-  border: 2px solid #ffffff;
-  font-family: "Open Sans", sans-serif;
-  background: var(--accent-primary);
-  color: var(--background);
-  font-weight: 600;
-  border-radius: 1.5rem;
-  padding: 6px 12px;
-  font-size: 0.925rem;
-  margin-top: 0.25rem;
 }
 
 #mark-past-button {
